# aoc-2022

./: LICENSE  README.md  copy_input.py  new_day.py  pyproject.toml
day_0/: day_x.py
day_1/: day1.py
day_10/: main.py
day_11/: main.py
day_12/: main.py
day_13/: main.py
day_14/: main.py
day_15/: main.py
day_2/: main.py
day_3/: main.py
day_4/: main.py
day_5/: main.py
day_6/: main.py
day_7/: main.py
day_8/: main.py
day_9/: main.py
