[tool.poetry]
name = "aoc22"
version = "0.1.0"
description = "advent of code 2022"
authors = ["Paulo Fassina"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
